添加自动恢复功能：实现 recover 方法以恢复未完成的工作流实例，并更新相关测试用例和示例

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "example": "bun run examples/example.ts",
     "advanced": "bun run examples/advanced-example.ts",
+    "recover-example": "bun run examples/recover-example.ts",
     "test": "bun test"
   },
   "devDependencies": {
