添加构建脚本和 TypeScript 配置：实现 build-package.js 脚本以生成发布用的 package.json，并添加 tsconfig.build.json 以支持构建输出

--- a/package.json
+++ b/package.json
@@ -2,7 +2,17 @@
   "name": "@codehz/workflow",
   "module": "src/index.ts",
   "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": ["dist"],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "scripts": {
+    "dist": "bun build src/index.ts --outdir dist --target node && bunx tsc --project tsconfig.build.json && bun run build-package.js",
     "example": "bun run examples/example.ts",
     "advanced": "bun run examples/advanced-example.ts",
     "recover-example": "bun run examples/recover-example.ts",
