--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@codehz/workflow",
+  "version": "0.0.0",
   "module": "src/index.ts",
   "type": "module",
   "main": "./dist/index.js",
@@ -16,10 +17,14 @@
     "example": "bun run examples/example.ts",
     "advanced": "bun run examples/advanced-example.ts",
     "recover-example": "bun run examples/recover-example.ts",
-    "test": "bun test"
+    "test": "bun test",
+    "release": "semantic-release"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@types/bun": "latest",
+    "semantic-release": "^25.0.1"
   },
   "peerDependencies": {
     "typescript": "^5"
