chore(config): 添加 repositoryUrl 字段到 package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": ["dist"],
+  "repositoryUrl": "https://github.com/codehz/workflow",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
