--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,11 +26,8 @@ jobs:
       - name: Release
         run: bun run release
 
-      - name: Setup NPM Auth
-        run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
       - name: Publish
         working-directory: dist
         run: bun publish
+        env:
+          NPM_CONFIG_TOKEN: ${{ secrets.NPM_TOKEN }}
