feat(storage): implement BunRedisWorkflowStorage class
- Added BunRedisWorkflowStorage for Redis-based workflow storage.
- Implemented methods for saving, updating, loading, and deleting workflow instances.
- Included functionality for managing instance states and step states.
- Added tests for InMemory and BunRedis storage functionalities.
- Enhanced Redis availability check in tests.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,16 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis:7.2
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout
         uses: actions/checkout@v4
