--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,6 +5,16 @@ on: push
 jobs:
   check:
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis:7.2
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout
         uses: actions/checkout@v4
