chore(package): update repository field in package.json
Updated the repository field in package.json for consistency.
Also added the repository information to the publishPkg object in release.ts.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "files": [
     "dist"
   ],
-  "repositoryUrl": "https://github.com/codehz/workflow",
+  "repository": "https://github.com/codehz/workflow",
   "scripts": {
     "dist": "bun run scripts/dist.ts",
     "example": "bun run examples/example.ts",
