chore(package): add keywords to package.json and release script
- Added keywords field in package.json for better package discoverability.
- Updated release script to include keywords when publishing the package.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "@codehz/workflow",
   "license": "MIT",
   "version": "0.0.0",
+  "keywords": [
+    "workflow",
+    "bun",
+    "typescript",
+    "async",
+    "automation"
+  ],
   "module": "src/index.ts",
   "type": "module",
   "files": [
