chore(package): update repository field to object format
Changed the repository field in package.json from a string to an object format, specifying the type and URL for better clarity and structure.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "files": [
     "dist"
   ],
-  "repository": "https://github.com/codehz/workflow",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codehz/workflow.git"
+  },
   "scripts": {
     "dist": "bun run scripts/dist.ts",
     "example": "bun run examples/example.ts",
