--- a/package.json
+++ b/package.json
@@ -11,15 +11,12 @@
   ],
   "module": "src/index.ts",
   "type": "module",
-  "files": [
-    "dist"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/codehz/workflow.git"
   },
   "scripts": {
-    "dist": "bun run scripts/dist.ts",
+    "build": "bun run scripts/dist.ts",
     "example": "bun run examples/example.ts",
     "advanced": "bun run examples/advanced-example.ts",
     "recover-example": "bun run examples/recover-example.ts",
