refactor(scripts): rename dist script to build and update references
- Renamed the build script from dist.ts to build.ts for clarity.
- Updated the release script to import from the new build.ts file.
- Removed the old dist.ts file as it is no longer needed.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/codehz/workflow.git"
   },
   "scripts": {
-    "build": "bun run scripts/dist.ts",
+    "build": "bun run scripts/build.ts",
     "example": "bun run examples/example.ts",
     "advanced": "bun run examples/advanced-example.ts",
     "recover-example": "bun run examples/recover-example.ts",
